--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ dj-database-url = "*"
 whitenoise = "*"
 djangorestframework = "*"
 graphene-django = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
